--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apolo-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://https://github.com/ApoloSolInvictus/oraculo-apolo.git/"
+  "homepage": "https://github.com/ApoloSolInvictus/oraculo-apolo.git/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
