--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apolo-web",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://apolosolinvictus.github.io/oraculo-apolo/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
